--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "eslint": "^9.24.0",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "^15.1.6",
     "next": "^15.3.0",
     "next-themes": "^0.2.1",
     "react": "^19.1.0",
@@ -20,9 +20,9 @@
     "@tailwindcss/postcss": "^4.1.3"
   },
   "devDependencies": {
-    "@types/node": "^20.8.9",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.0",
+    "@types/node": "^22.15.3",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.0",
     "autoprefixer": "^10.4.17",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.11",
