added select component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "baseUrl": ".",
     "paths": {
-      "@/uitypes/*": ["./src/components/ui/types/*"],
+      "@/ui/types/*": ["./src/components/ui/types/*"],
       "@/ui/*": ["./src/components/ui/*"],
       "@/components/*": ["./src/components/*"],
       "@/*": ["./src/*"]
