--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.1.3",
+    "clsx": "^2.1.1",
     "eslint": "^9.24.0",
     "eslint-config-next": "^15.1.6",
     "next": "^15.3.0",
